--- a/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
@@ -38,6 +38,52 @@
     <h1 id="aa">Cadastrar Vacinas</h1>
 
 
-    
+    <form class="form-horizontal">
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Nome da Vacina:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Lote da Vacina:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Fabricante:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Data de Fabricação:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Data de Vencimento:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Quantidade:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+
+            <div class="controls">
+                <button class="btn btn-info" type="submit">Salvar</button>
+                <button class="btn btn-info" type="reset">Limpar</button>
+
+            </div>
+        </div>
+
+    </form>
 
 </div>
