--- a/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
@@ -1,7 +1,17 @@
+
 <style type="text/css">
 
     h1#aa{
         background-color: #ffcc99;
+        text-align: center;
+        font-size: 20pt;
+        width: 550pt;
+        margin: 10px 0 30px 5px;
+
+    }
+     h1#bb{
+        background-color: #000000;
+        color: #fff;
         text-align: center;
         font-size: 20pt;
         width: 550pt;
@@ -27,6 +37,11 @@
         padding: 40px;
         background: #fff;
     }
+    
+    thead{
+        color: #fff;
+        background-color: #000000;
+    }
 
 
 
@@ -37,7 +52,81 @@
 <div class="span9">
     <h1 id="aa">Consultar Vacinas</h1>
 
+    <br><br>
 
+    <form class="form-inline">
+        <select>
+            <option>Selecione a opção</option>
+            <option>Nome</option>
+            <option>Código</option>
+            <option>Todos</option>
+        </select>
+        <div class="input-append">
+            <input class="span2" id="appendedInputButton" type="text">
+            <button class="btn btn-info" type="button"><i class="icon-search icon-white"></i>&nbsp;Pesquisar</button>
+        </div>
+    </form>
     
+    <br><br><br>
+
+    <!--ABAIXO APARECERÁ A LISTA COM OS RESULTADOS DA CONSULTA-->
+
+    <h1 id="bb">Resultado da Pesquisa</h1>
+
+    <br><br><br>
+
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Cód. da Vacina</th>
+                <th>Nome da Vacina</th>
+                <th>Dt. de Fabricação</th>
+                <th>Dt. de Vencimento</th>
+                <th>Função</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>12</td>
+                <td>BCG-ID</td>
+                <td>10/10/2011</td>
+                <td>20/10/2013</td>
+                <td><button title="Excluir" class="btn btn-danger btn btn-mini" type="button"><i class="icon-trash icon-white"></i></button>&nbsp;
+                    <button title="Alterar" class="btn btn-primary btn btn-mini" type="button"><i class="icon-pencil icon-white"></i></button></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>09</td>
+                <td>Sabin</td>
+                <td>15/02/2010</td>
+                <td>22/06/2011</td>
+                <td><button title="Excluir" class="btn btn-danger btn btn-mini" type="button"><i class="icon-trash icon-white"></i></button>&nbsp;
+                    <button title="Alterar" class="btn btn-primary btn btn-mini" type="button"><i class="icon-pencil icon-white"></i></button></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>25</td>
+                <td>Tríplice vira</td>
+                <td>25/06/2012</td>
+                <td>10/02/2014</td>
+                <td><button title="Excluir" class="btn btn-danger btn btn-mini" type="button"><i class="icon-trash icon-white"></i></button>&nbsp;
+                    <button title="Alterar" class="btn btn-primary btn btn-mini" type="button"><i class="icon-pencil icon-white"></i></button></td>
+            </tr>
+        </tbody>
+    </table>
+
 
 </div>
+
+
+
+
+
+
+
+
+
+
+
