--- a/application/modules/admin/views/scripts/perfil/editar.phtml
+++ b/application/modules/admin/views/scripts/perfil/editar.phtml
@@ -38,7 +38,53 @@
     <h1 id="aa">Editar Perfil</h1>
 
 
-    
+    <form class="form-horizontal">
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Usuário:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Nome Completo:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">E-mail:</label>
+            <div class="controls">
+                <input type="email" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Telefone Celular:</label>
+            <div class="controls">
+                <input type="text" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Senha:</label>
+            <div class="controls">
+                <input type="password" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Confirmar-Senha:</label>
+            <div class="controls">
+                <input type="password" placeholder="Text input">
+            </div>
+        </div>
+        <div class="control-group">
+
+            <div class="controls">
+                <button class="btn btn-info" type="submit">Salvar</button>
+                <button class="btn btn-info" type="reset">Limpar</button>
+
+            </div>
+        </div>
+
+    </form>
 
 </div>
 
