--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -9,6 +9,15 @@
         margin: 10px 0 30px 5px;
 
     }
+    h1#bb{
+        background-color: #000000;
+        color: #fff;
+        text-align: center;
+        font-size: 20pt;
+        width: 550pt;
+        margin: 10px 0 30px 5px;
+
+    }
     li a:hover{
         color: #CB0101;
 
@@ -29,6 +38,11 @@
         background: #fff;
     }
 
+    thead{
+        color: #fff;
+        background-color: #000000;
+    }
+
 
 
 </style>
@@ -38,18 +52,96 @@
 <div class="span9">
     <h1 id="aa">Consultar Funcionários</h1>
 
+    <br><br>
+
+    <form class="form-inline">
+        <select>
+            <option>Selecione a opção</option>
+            <option>Nome</option>
+            <option>Matricula</option>
+            <option>Todos</option>
+        </select>
+        <div class="input-append">
+            <input class="span2" id="appendedInputButton" type="text">
+            <button class="btn btn-info" type="button"><i class="icon-search icon-white"></i>&nbsp;Pesquisar</button>
+        </div>
+    </form>
+
+    <br><br><br>
+
+    <!--ABAIXO APARECERÁ A LISTA COM OS RESULTADOS DA CONSULTA-->
+
+    <h1 id="bb">Resultado da Pesquisa</h1>
+
+    <br><br><br>
+
+    <!--PAGINAÇÃO DAS TABELAS DA PESQUISA-->
+
+    <div class="pagination pagination-centered span9">
+        <ul>
+            <!--TABELA COM OS DADOS DA PESQUISA-->
+            <li>
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Usuário</th>
+                            <th>Nome Completo</th>
+                            <th>Matrícula Nº</th>
+                            <th>Status</th>
+                            <th>Função</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Rossete</td>
+                            <td>Rossete da Silva Sauro</td>
+                            <td>111111111</td>
+                            <td>Ativo</td>
+                            <td><button title="Excluir" class="btn btn-danger btn btn-mini" type="button"><i class="icon-trash icon-white"></i></button>&nbsp;
+                                <button title="Alterar" class="btn btn-primary btn btn-mini" type="button"><i class="icon-pencil icon-white"></i></button></td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Gil</td>
+                            <td>Gilmar Caetano Gomes</td>
+                            <td>333333333</td>
+                            <td>Ativo</td>
+                            <td><button title="Excluir" class="btn btn-danger btn btn-mini" type="button"><i class="icon-trash icon-white"></i></button>&nbsp;
+                                <button title="Alterar" class="btn btn-primary btn btn-mini" type="button"><i class="icon-pencil icon-white"></i></button></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Da vinci</td>
+                            <td>Leonardo da Vinci</td>
+                            <td>888888888</td>
+                            <td>Inativo</td>
+                            <td><button title="Excluir" class="btn btn-danger btn btn-mini" type="button"><i class="icon-trash icon-white"></i></button>&nbsp;
+                                <button title="Alterar" class="btn btn-primary btn btn-mini" type="button"><i class="icon-pencil icon-white"></i></button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </li>
+            
+            <li><a href="#">2</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li><a href="#">6</a></li>
+            <li><a href="#">7</a></li>
+            <li><a href="#">anterior</a></li>
+
+        </ul>
+
+
+    </div>
+
+
+
+
+
+
+
+
 
     
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
