Melhoria do formulario de cadastro de pessoa e inserção da classe model login

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -82,6 +82,7 @@
                                     <a href="/admin/cartao/cadastro-cartao">Cadastrar</a>
                                 </div>
                             </li>
+                            <li><a class="btn" href="/admin/auth/logout">Sair</a></li>
                         </ul>                   
                     </div>
                     <div id="content" style="background-color: #fff;">
