--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -255,7 +255,7 @@
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">E-mail:</label>
                         <div class="controls">
-                            <input type="text" id="inputEmail" placeholder="">
+                            <input name="email" type="text" id="inputEmail" placeholder="">
                         </div>
                     </div>
                     <div class="control-group">
@@ -267,13 +267,13 @@
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Usuário:</label>
                         <div class="controls">
-                            <input type="text" placeholder="">
+                            <input name="usuario" type="text" placeholder="">
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Senha:</label>
                         <div class="controls">
-                            <input type="password" id="inputPassword" placeholder="">
+                            <input name="senha" type="password" id="inputPassword" placeholder="">
                         </div>
                     </div>
                     <div class="control-group">
