Add, melhoria do formulario de cadastro

--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -267,19 +267,19 @@
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Usuário:</label>
                         <div class="controls">
-                            <input name="usuario" type="text" placeholder="">
+                            <?php echo $this->form->Login->nome_login ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Senha:</label>
                         <div class="controls">
-                            <input name="senha" type="password" id="inputPassword" placeholder="">
+                            <?php echo $this->form->Login->senha_login ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Confirmar-Senha:</label>
                         <div class="controls">
-                            <input type="password" id="inputPassword" placeholder="">
+                            <?php echo $this->form->Login->senha_login ?>
                         </div>
                     </div>
                     <div class="control-group">
