Atualização de copia de trabalho.

--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -2,7 +2,7 @@
 <style type="text/css">
 
     h1#aa{
-        background-color: #ffcc99;
+        background-color: #dbc59e;;
         text-align: center;
         font-size: 20pt;
         width: 550pt;
