--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,7 +42,7 @@ h1,h2,h3,h4 {
 }
 
 #faixa {
-	background-color:#0099ff;
+	background-color:#5BC0DE;
 	text-align:center;
         font-size: 25pt;
         width: 610pt;
