--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -36,7 +36,7 @@
 
 
 <div class="span9">
-    <h1 id="aa">Cadastrar Paciente</h1>
+    <h1 id="aa">Cadastrar_Paciente</h1>
 
 
     <div style="margin-bottom: 18px;" class="tabbable">
