--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -15,8 +15,8 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Painel Administrativo</title>
 
-        <link href="/assets/css/acoordeon.css" rel="stylesheet" type="text/css" />
-        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+        <!--<link href="/assets/css/acoordeon.css" rel="stylesheet" type="text/css" />-->
+        <!--<link href="/assets/css/style.css" rel="stylesheet" type="text/css" />-->
         <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
 
@@ -26,75 +26,71 @@
         <script type="text/javascript" src="/assets/js/acoordeon.js"></script>
     </head>
     <body>
-        <div id="bg">
-            <div id="outer">
-                <div id="header">
-                    <div id="logo">
-                        <h1>
-                            <a href="/admin/">
-                                <img src="/assets/imagens/simova_logo.png"></img>
-                            </a>
-                        </h1>
+        <div class="navbar navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container-fluid">
+                    <div class="navbar">
+                        <a class="brand" href="/admin/index">Simova - Painel Administrativo</a>
                     </div>
-                    <div id="nav">
-                        <h1 id="faixa">Painel Admininstrativo</h1>
-                        <br class="clear"/>
-                    </div>
-                </div>
-                <div id="main">
-                    <div id="sidebar" class="span2">
-                        <h3 id="tam">
-                            Menu
-                        </h3>
-                        <ul id="menuGeral">
-                            <li>
-                                <a style="background: #ffcc99;" class="itemMenu">Administrador</a>
-                                <div class="conteudoMenu">
-                                    <a href="/admin/perfil/editar">Editar Perfil</a>
-
-                                </div>
-                            </li>
-                            <li>
-                                <a style="background: #ffcc99;" class="itemMenu">Funcionários</a>
-                                <div class="conteudoMenu">
-                                    <a href="/admin/pessoa/consulta-funcionario">Consultar</a>
-                                    <a href="/admin/pessoa/cadastro-funcionario">Cadastrar</a>
-
-                                </div>
-                            </li>
-                            <li><a style="background: #ffcc99;" class="itemMenu">Pacientes</a>
-                                <div class="conteudoMenu">
-                                    <a href="/admin/pessoa/consulta-paciente">Consultar</a>
-                                    <a href="/admin/pessoa/cadastro-paciente" >Cadastrar</a>
-
-                                </div>
-                            </li>
-                            <li><a style="background: #ffcc99;" class="itemMenu">Vacinas</a>
-                                <div class="conteudoMenu">
-                                    <a href="/admin/vacina/consulta-vacina">Consultar</a>
-                                    <a href="/admin/vacina/cadastro-vacina">Cadastrar</a>
-
-                                </div>
-                            </li>
-                            <li><a style="background: #ffcc99;" class="itemMenu">Cartão de Vacinas</a>
-                                <div class="conteudoMenu">
-                                    <a href="/admin/cartao/consulta-cartao">Consultar</a>
-                                    <a href="/admin/cartao/cadastro-cartao">Cadastrar</a>
-                                </div>
-                            </li>
-                            <li><a class="btn" href="/admin/auth/logout">Sair</a></li>
-                        </ul>                   
-                    </div>
-                    <div id="content" style="background-color: #fff;">
-                        <?php echo $this->layout()->content ?>
-                    </div>
-                    <br class="clear" />
-
-                </div>
-                <div id="copyright">
-                    &copy; SIMOVA - Sistema de Monitoramento de Vacinas 
                 </div>
             </div>
+        </div>
+        <hr></hr>
+        <hr></hr>
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span3">
+                    <div class="well sidebar-nav">
+                        <ul class="nav nav-list">
+                            <li class="active"><a>Menu</a></li>
+                            <li>
+                                <li class="itemMenu"><a class="nav-header" href="#">Administrador</a></li>
+                                <ul class="conteudoMenu">
+                                    <li><a href="/admin/perfil/editar">Editar Perfil</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <li class="itemMenu"><a class="nav-header" href="#">Funcionários</a></li>
+                                <ul class="conteudoMenu">
+                                    <li><a href="/admin/pessoa/consulta-funcionario">Consultar</a></li>
+                                    <li><a href="/admin/pessoa/cadastro-funcionario">Cadastrar</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <li class="itemMenu"><a class="nav-header" href="#">Pacientes</a></li>
+                                <ul class="conteudoMenu">
+                                    <li><a href="/admin/pessoa/consulta-paciente">Consultar</a></li>
+                                    <li><a href="/admin/pessoa/cadastro-paciente" >Cadastrar</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <li class="itemMenu"><a class="nav-header" href="#">Vacinas</a></li>
+                                <ul class="conteudoMenu">
+                                    <li><a href="/admin/vacina/consulta-vacina">Consultar</a></li>
+                                    <li><a href="/admin/vacina/cadastro-vacina">Cadastrar</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <li class="itemMenu"><a class="nav-header" href="#">Cartão de Vacinas</a></li>
+                                <ul class="conteudoMenu">
+                                    <li><a href="/admin/cartao/consulta-cartao">Consultar</a></li>
+                                    <li><a href="/admin/cartao/cadastro-cartao">Cadastrar</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <li class="itemMenu"><a class="nav-header" href="/admin/auth/logout">Sair</a></li>
+                            </li>
+                        </ul>                   
+                    </div>
+                </div>
+                <div class="span9">
+                    <?php echo $this->layout()->content ?>
+                </div>
+            </div>
+            <hr>
+                <footer>
+                    &copy; SIMOVA - Sistema de Monitoramento de Vacinas 
+                </footer>
         </div>
     </body>
 </html>
