Versão com aplicação dos conceitos de acessibilidade e usabilidade e inicio de trabalho com formulario de paciente.
Boa noite para todos!

--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -1,5 +1,5 @@
 
-<style type="text/css">
+<!--<style type="text/css">
 
     h1#aa{
         background-color: #ffcc99;
@@ -31,7 +31,7 @@
 
 
 
-</style>
+</style>-->
 
 
 
