Melhoria de formulario e aplicação de bibliotecas jquery de automatização.

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -19,11 +19,13 @@
         <!--<link href="/assets/css/style.css" rel="stylesheet" type="text/css" />-->
         <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/css/jquery.ui.css" rel="stylesheet" type="text/css" />
 
         <script type="text/javascript" src="/assets/js/jquery.js"></script>
         <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
         <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/assets/js/acoordeon.js"></script>
+        <script type="text/javascript" src="/assets/js/jquery.ui.js"></script>
     </head>
     <body>
         <div class="navbar navbar-fixed-top">
