--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -1,42 +1,6 @@
-
-<!--<style type="text/css">
-
-    h1#aa{
-        background-color: #ffcc99;
-        text-align: center;
-        font-size: 20pt;
-        width: 550pt;
-        margin: 10px 0 30px 5px;
-
-    }
-    li a:hover{
-        color: #CB0101;
-
-    }
-    li a:active{
-        border-style: none;
-    }
-
-    .tabbable{
-        height: auto;
-    }
-
-    div #content{
-        width: 745px;
-        height:800px;
-        margin: 0 0 0 355px;
-        padding: 40px;
-        background: #fff;
-    }
-
-
-
-</style>-->
-
-
-
-<div class="span9">
-    <h1 id="aa">Cadastrar Funcionários</h1>
+<script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<fieldset>
+    <legend>Cadastrar Funcionários</legend>
     <?php
     if ($this->mensagem):
         foreach ($this->mensagem as $mensagem):
@@ -53,13 +17,12 @@
             <li class=""><a data-toggle="tab" href="#tab2">Endereço</a></li>
             <li class=""><a data-toggle="tab" href="#tab3">Dados Complementares</a></li>
         </ul>
-        <form class="bs-docs-example form-horizontal" method="post">
-            <div style="padding-bottom: 9px; border-bottom: 1px solid #ddd;" class="tab-content">
+        <form class="form-horizontal" method="post">
+            <div class="tab-content">
                 <div id="tab1" class="tab-pane active">
 
                     <!--INICIO DO PRIMEIRO FORM-->
 
-                    <p>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Nome Completo:</label>
                         <div class="controls">
@@ -114,21 +77,18 @@
                             <?php echo $this->form->cpf ?>
                         </div>
                     </div>
-                    <div class="control-group">
-
-                        <div class="controls">
-                            <a class="btn btn-primary" href="#tab2" data-toggle="tab"><i class="icon-forward icon-white"></i></a>
+                    <div class="form-actions">
+                        <div class="control-group">
+                            <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
                         </div>
                     </div>
 
                 </div> <!--FIM DO PRIMEIRO MENU-->
 
-
                 <div id="tab2" class="tab-pane">
 
                     <!--INICIO DO SEGUNDO FORM-->
 
-                    <p>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Rua:</label>
                         <div class="controls">
@@ -172,21 +132,17 @@
                         </div>
                     </div>
 
-                    <div class="control-group">
-
-                        <div class="controls">
-                            <a class="btn btn-primary" href="#tab3" data-toggle="tab"><i class="icon-forward icon-white"></i></a>
-                            <a class="btn btn-primary" href="#tab1" data-toggle="tab"><i class="icon-backward icon-white"></i></a>
+                    <div class="form-actions">
+                        <div class="control-group">
+                            <a class="btn btn-primary" href="#tab1" data-toggle="tab">Voltar <i class="icon-backward icon-white"></i></a>
+                            <a class="btn btn-primary" href="#tab3" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
                         </div>
                     </div>
                 </div> <!--FIM DO SEGUNDO MENU-->
 
-
                 <div id="tab3" class="tab-pane">
 
                     <!--INICIO DO TERCEIRO FORM-->
-
-                    <p>
 
                     <div class="control-group">
                         <div class="control-group">
@@ -260,20 +216,17 @@
                             <?php echo $this->form->Login->senha_login ?>
                         </div>
                     </div>
-                    <div class="control-group">
-
-                        <div class="controls">
+                    <div class="form-actions">
+                        <div class="control-group">
                             <button class="btn btn-info" type="submit">Salvar</button>
                             <button class="btn btn-info" type="reset">Limpar</button>
-
                         </div>
                     </div>
                 </div> <!--FIM DO TERCEIRO MENU-->
             </div>
         </form>
     </div>
-
-</div>
+</fieldset>
 
 
 
