--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -1,77 +1,22 @@
-<!--
-<style type="text/css">
+<fieldset>
+    <legend>Consultar Funcionários</legend>
 
-    h1#aa{
-        background-color: #ffcc99;
-        text-align: center;
-        font-size: 20pt;
-        width: 550pt;
-        margin: 10px 0 30px 5px;
+    <form class="form-inline" method="post" action="">
+        <select name="tipoConsulta">
+            <option value="">Selecione a opção</option>
+            <option value="nome">Nome</option>
+            <option value="matricula">Matricula</option>
+            <option value="">Todos</option>
+        </select>
+        <div class="input-append">
+            <input class="input-large" name="search" id="appendedInputButton" type="text">
+            <button type="submit" class="btn btn-info"><i class="icon-search icon-white"></i>&nbsp;Pesquisar</button>
+        </div>
+    </form>
 
-    }
-    h1#bb{
-        background-color: #000000;
-        color: #fff;
-        text-align: center;
-        font-size: 20pt;
-        width: 550pt;
-        margin: 10px 0 30px 5px;
+    <!--ABAIXO APARECERÁ A LISTA COM OS RESULTADOS DA CONSULTA-->
 
-    }
-    li a:hover{
-        color: #CB0101;
-
-    }
-    li a:active{
-        border-style: none;
-    }
-
-    .tabbable{
-        height: auto;
-    }
-
-    div #content{
-        width: 745px;
-        height:700px;
-        margin: 0 0 0 355px;
-        padding: 40px;
-        background: #fff;
-    }
-
-    thead{
-        color: #fff;
-        background-color: #000000;
-    }
-
-
-
-</style>-->
-
-
-<h1 id="aa">Consultar Funcionários</h1>
-
-<br><br>
-
-<form class="form-inline" method="post" action="">
-    <select name="tipoConsulta">
-        <option value="">Selecione a opção</option>
-        <option value="nome">Nome</option>
-        <option value="matricula">Matricula</option>
-        <option value="">Todos</option>
-    </select>
-    <div class="input-append">
-        <input class="input-large" name="search" id="appendedInputButton" type="text">
-        <button type="submit" class="btn btn-info"><i class="icon-search icon-white"></i>&nbsp;Pesquisar</button>
-    </div>
-</form>
-
-<!--ABAIXO APARECERÁ A LISTA COM OS RESULTADOS DA CONSULTA-->
-
-<legend id="bb">Resultado da Pesquisa</legend>
-
-<!--PAGINAÇÃO DAS TABELAS DA PESQUISA-->
-
-<div class="pagination pagination-centered">
+    <!--PAGINAÇÃO DAS TABELAS DA PESQUISA-->
 
     <table class="table table-bordered table-striped">
         <thead>
@@ -85,7 +30,6 @@
             </tr>
         </thead>
         <tbody>
-            <?php //print_r($this->listFuncionarios); ?>
             <?php foreach ($this->listFuncionarios as $funcionarios): ?>
                 <tr>
                     <td><?php echo $funcionarios->cod_pessoa ?></td>
@@ -101,25 +45,17 @@
             <?php endforeach; ?>
         </tbody>
     </table>
-    <ul>
-        <!--TABELA COM OS DADOS DA PESQUISA-->
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">6</a></li>
-        <li><a href="#">7</a></li>
-        <li><a href="#">anterior</a></li>
-
-    </ul>
-</div>
-
-
-
-
-
-
-
-
-
-
+    <div class="pagination pagination-centered">
+        <ul>
+            <!--TABELA COM OS DADOS DA PESQUISA-->
+            <li><a href="#">Anterior</a></li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li><a href="#">6</a></li>
+            <li><a href="#">7</a></li>
+            <li><a href="#">Proximo</a></li>
+        </ul>
+    </div>
+</fieldset>
