Fechando formulario de edição de dados de funcionario.

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -26,6 +26,7 @@
         <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/assets/js/acoordeon.js"></script>
         <script type="text/javascript" src="/assets/js/jquery.ui.js"></script>
+        <script type="text/javascript" src="/assets/js/confirm-action.js"></script>
     </head>
     <body>
         <div class="navbar navbar-fixed-top">
